latest changes for user profile